solution to exercise 3, note that in the solution proposed they used two subdivisions, one to the right and another one to the left, this is useful since the general property gap will easily left to add more elements naturally later. Furthermore the padding of ul can be set to 0 and any other element that has a padding too, so that the gap is the correct

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,11 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px; 
 }
 
 .profile-image {
@@ -35,6 +40,8 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+ 
+  margin: 20px;
 }
 
 a {
@@ -45,4 +52,12 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+
+  padding: 0px 0px 0px 20px;
+  gap: 10px;
+}
+
+.notifications{
+  margin-left: auto;
 }
